@@ -40,6 +40,7 @@ int main()
   }
 
   if (!iarray_integrity(&ia)) return 1;
+  iarray_dump(&ia, IARRAY_DUMP_INT);
 
   iarray_free(&ia);
   return 0;
