@@ -1,0 +1,5 @@
+t_iarray7.o
+t_iarray.o
+../iarray.a
+../alloc.a
+../bin.a
