@@ -28,6 +28,7 @@ int iarray_cat(struct iarray *, void *, unsigned long);
 int iarray_copy(struct iarray *, const struct iarray *);
 int iarray_insert(struct iarray *, unsigned long, void *, unsigned long);
 void iarray_remove(struct iarray *, unsigned long);
+void iarray_sort(struct iarray *, int (*)(const void *, unsigned long, const void *, unsigned long));
 
 unsigned long iarray_size(const struct iarray *);
 unsigned long iarray_bytes(const struct iarray *);
@@ -39,7 +40,5 @@ unsigned long iarray_bytes(const struct iarray *);
 int iarray_nindex(const struct iarray *, unsigned long, struct iarray_node **);
 int iarray_newnodes(struct iarray_node **, struct iarray_node **, unsigned long);
 int iarray_fillnode(struct iarray_node *, void *, unsigned long);
-int iarray_findnext(struct iarray_node *, struct iarray_node **);
-int iarray_findprev(struct iarray_node *, struct iarray_node **);
 
 #endif
